Eclipse Oxygen + JDK 9 adaptation